Adding more Component interactions like ViewChild

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div>
-  <input [(ngModel)]="name">
+  <input #nameRef [(ngModel)]="name">
   <p>
     Merry Cristmas {{name}}
   </p>
@@ -36,3 +36,4 @@
     Welcome!! {{customerName}}
   </p>
 </div>
+
